--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.4.0",
     "apexcharts": "^3.24.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "mui-datatables": "^3.7.4",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.14.0",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "react-toastify": "^7.0.3",
     "recharts": "^2.0.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "tinycolor2": "^1.4.2"
   },
   "scripts": {
